--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "react-redux-starter-kit",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^5.0.0-beta.5",
-    "@material-ui/icons": "^4.11.2",
-    "@reduxjs/toolkit": "^1.6.1",
+  "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -13,7 +10,12 @@
     "@types/node": "^12.20.23",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
-    "@types/react-redux": "^7.1.18",
+    "@types/react-redux": "^7.1.18"
+  },
+  "dependencies": {
+    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
