--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-redux-starter-kit",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nzminusdev.github.io/react-redux-starter-kit/",
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -10,7 +11,8 @@
     "@types/node": "^12.20.23",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
-    "@types/react-redux": "^7.1.18"
+    "@types/react-redux": "^7.1.18",
+    "gh-pages": "^3.2.3"
   },
   "dependencies": {
     "@material-ui/core": "^5.0.0-beta.5",
@@ -27,6 +29,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
