--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "gh-pages": "^3.2.3",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "source-map-explorer": "^2.5.2"
   },
   "dependencies": {
     "@material-ui/core": "^5.0.0-beta.5",
@@ -46,9 +47,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "test": "react-scripts test",
     "build": "react-scripts build",
     "lint:autofix": "eslint ./src/ --ext .js,.jsx,.ts,.tsx --fix",
-    "test": "react-scripts test",
+    "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
