--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "source-map-explorer": "^2.5.2"
   },
   "dependencies": {
+    "@craco/craco": "^6.2.0",
     "@material-ui/core": "^5.0.0-beta.5",
     "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.6.1",
@@ -60,14 +61,13 @@
     "singleQuote": true
   },
   "scripts": {
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "test": "craco test",
+    "build": "craco build",
     "lint:autofix": "eslint ./src/ --ext .js,.jsx,.ts,.tsx --fix",
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "eject": "react-scripts eject"
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
