--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^8.3.0",
@@ -37,6 +38,8 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-sonarjs": "^0.10.0",
     "gh-pages": "^3.2.3",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "source-map-explorer": "^2.5.2"
   },
@@ -60,14 +63,23 @@
     "printWidth": 100,
     "singleQuote": true
   },
+  "lint-staged": {
+    "*": [
+      "prettier --ignore-unknown --write"
+    ],
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "craco test --watchAll=false --bail --findRelatedTests"
+    ]
+  },
   "scripts": {
     "start": "craco start",
     "test": "craco test",
-    "build": "craco build",
-    "lint:autofix": "eslint ./src/ --ext .js,.jsx,.ts,.tsx --fix",
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
+    "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "build": "craco build",
+    "prepare": "husky install"
   },
   "browserslist": {
     "production": [
