--- a/configs/ts/tsconfig.json
+++ b/configs/ts/tsconfig.json
@@ -27,7 +27,7 @@
       "@modules/*": ["src/modules/*"],
       "@services/*": ["src/services/*"],
       "@shared/*": ["src/shared/*"],
-      "@configs/*": ["src/configs/*"]
+      "@assets/*": ["src/assets/*"]
     }
   },
   "include": ["../../src"]
