--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
     "jebbs.plantuml",
     "davidanson.vscode-markdownlint",
     "streetsidesoftware.code-spell-checker-russian",
-    "wayou.vscode-todo-highlight"
+    "wayou.vscode-todo-highlight",
+    "silvenon.mdx"
   ]
 }
