--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "author": "Nikita Zaitsev <developer.n.zaytsev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@storybook/addon-actions": "^6.3.8",
+    "@storybook/addon-essentials": "^6.3.8",
+    "@storybook/addon-links": "^6.3.8",
+    "@storybook/node-logger": "^6.3.8",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.3.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -63,6 +69,8 @@
   "scripts": {
     "start": "craco start",
     "test": "craco test",
+    "storybook": "start-storybook -p 6006 -c configs/.storybook -s public",
+    "storybook:build": "build-storybook -c configs/.storybook -s public",
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "deploy": "gh-pages -d build",
     "predeploy": "npm run build",
