--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,21 @@
 {
   "editor.tabSize": 2,
-  "editor.rulers": [100],
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 80,
+  "editor.rulers": [80],
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
   },
-  "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
@@ -50,18 +61,30 @@
   "path-autocomplete.triggerOutsideStrings": true,
   "path-autocomplete.enableFolderTrailingSlash": true,
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "plantuml.exportOutDir": "./",
   "cSpell.language": "en,ru",
   "cSpell.words": [
+    "AMCSS",
     "autofix",
     "browserslist",
     "CNAME",
+    "combinator",
     "craco",
+    "csstype",
+    "monospace",
+    "precached",
     "predeploy",
     "Quokka",
     "reduxjs",
     "sassdoc",
+    "Serializers",
     "sonarjs",
+    "stylelint",
+    "stylelintrc",
+    "TCSS",
+    "typeof",
+    "Viewports",
+    "vmax",
+    "vmin",
     "Zaitsev"
   ]
 }
