--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
     "CNAME",
     "combinator",
     "craco",
+    "fontawesome",
+    "fortawesome",
     "monospace",
     "precached",
     "predeploy",
