--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.1",
+    "mdi-material-ui": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
