--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.5",
     "@reduxjs/toolkit": "^1.6.1",
     "mdi-material-ui": "^7.0.0",
     "react": "^17.0.2",
