--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "favicons-webpack-plugin": "^4.2.0",
     "mdi-material-ui": "^7.0.0",
+    "obsolete-webpack-plugin": "^0.5.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.5",
