--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,7 +72,10 @@
     "favicons",
     "fontawesome",
     "fortawesome",
+    "hookform",
+    "lazyload",
     "monospace",
+    "notistack",
     "precached",
     "predeploy",
     "Quokka",
