--- a/package.json
+++ b/package.json
@@ -103,19 +103,24 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.5",
     "@reduxjs/toolkit": "^1.6.1",
+    "@use-gesture/react": "^10.1.1",
     "favicons-webpack-plugin": "^4.2.0",
     "mdi-material-ui": "^7.0.0",
+    "notistack": "^2.0.3",
     "obsolete-webpack-plugin": "^0.5.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "stylelint-webpack-plugin": "^3.0.1",
-    "typescript": "^4.1.6"
+    "typescript": "^4.1.6",
+    "yup": "^0.32.11"
   }
 }
