--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,17 +69,21 @@
     "CNAME",
     "combinator",
     "craco",
+    "datetime",
     "favicons",
     "fontawesome",
     "fortawesome",
     "hookform",
+    "languagedetector",
     "lazyload",
     "monospace",
     "notistack",
+    "oups",
     "precached",
     "predeploy",
     "Quokka",
     "reduxjs",
+    "relativetime",
     "sassdoc",
     "Serializers",
     "smth",
