--- a/package.json
+++ b/package.json
@@ -63,10 +63,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "^12.20.23",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.3.2",
     "@types/stylelint": "^13.13.2",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -111,11 +113,16 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@use-gesture/react": "^10.1.1",
     "favicons-webpack-plugin": "^4.2.0",
+    "i18next": "^21.4.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-resources-to-backend": "^1.0.0",
+    "lodash-es": "^4.17.21",
     "mdi-material-ui": "^7.0.0",
     "notistack": "^2.0.3",
     "obsolete-webpack-plugin": "^0.5.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.13.0",
     "react-lazyload": "^3.2.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
